--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Okan Olgun – AI Engineer & Data Scientist">
   <meta property="og:description" content="Portfolio showcasing work in medical imaging, AI platforms, and data products.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-domain.example/">
+  <meta property="og:url" content="https://okanolgun.github.io/">
   <meta property="og:image" content="/assets/portrait.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" href="/favicon.ico">
