--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="Portfolio showcasing work in medical imaging, AI platforms, and data products.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://okanolgun.github.io/">
-  <meta property="og:image" content="/assets/portrait.jpg">
+  <meta property="og:image" content="/avatar.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -108,15 +108,15 @@
           <h1 class="fw-bold display-4" style="letter-spacing:-0.02em;">Building reliable AI for real-world impact.</h1>
           <p class="lead mt-3" style="max-width:760px;">Production-grade machine learning across medical imaging, cybersecurity, fintech, and energy. From research to deployment with measurable outcomes.</p>
           <div class="mt-4">
-            <a href="eski converter kodları/Okan_Olgun resume.pdf" target="_blank" class="btn btn-brand btn-lg me-2">Download CV (EN)</a>
-            <a href="eski converter kodları/Okan_Olgun özgeçmiş.pdf" target="_blank" class="btn btn-ghost btn-lg me-2">Download CV (TR)</a>
+            <a href="/Okan_Olgun_resume.pdf" target="_blank" class="btn btn-brand btn-lg me-2">Download CV (EN)</a>
+            <a href="/Okan_Olgun_ozgecmis.pdf" target="_blank" class="btn btn-ghost btn-lg me-2">Download CV (TR)</a>
             <a href="https://github.com/okanolgun" class="btn btn-ghost btn-lg me-2"><i class="bi bi-github me-1"></i> GitHub</a>
             <a href="https://www.linkedin.com/in/okanolgun06/" class="btn btn-ghost btn-lg me-2"><i class="bi bi-linkedin me-1"></i> LinkedIn</a>
             <a href="https://medium.com/@okanolgun980" class="btn btn-ghost btn-lg"><i class="bi bi-medium me-1"></i> Medium</a>
           </div>
         </div>
         <div class="col-lg-6 text-center">
-          <img src="/assets/portrait.jpg" alt="Portrait of Okan Olgun" class="rounded-circle shadow" style="max-width: 320px; width: 80%; height: auto; object-fit: cover;" />
+          <img src="/avatar.jpg" alt="Portrait of Okan Olgun" class="rounded-circle shadow" style="max-width: 320px; width: 80%; height: auto; object-fit: cover;" onerror="this.style.display='none'" />
         </div>
       </div>
     </div>
