--- a/index.html
+++ b/index.html
@@ -312,7 +312,30 @@
           </h2>
           <div id="exp2025" class="accordion-collapse collapse" aria-labelledby="exp2025h" data-bs-parent="#expAccordion">
             <div class="accordion-body">
-              MRI segmentation pipelines (MONAI, SynthSeg), diagnosis code NLP, TÜBİTAK 1501 projeleri; veri hattı, değerlendirme ve ürünleştirme sorumlulukları.
+              <ul class="mb-0">
+                <li>Brain MRI segmentation using 3D U-Net and DynUNet architectures with MONAI framework</li>
+                <li>NLP models for automated diagnosis code classification and medical text processing</li>
+                <li>TÜBİTAK 1501 project development: AI-powered medical imaging solutions</li>
+                <li>Data pipeline optimization and model deployment for production environments</li>
+                <li>Collaboration with medical professionals for clinical validation and feedback integration</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item bg-transparent border rounded-3 mb-2">
+          <h2 class="accordion-header" id="expResh">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#expRes" aria-expanded="false" aria-controls="expRes">
+              2024–Present • Research Assistant – Data-driven Energy Systems
+            </button>
+          </h2>
+          <div id="expRes" class="accordion-collapse collapse" aria-labelledby="expResh" data-bs-parent="#expAccordion">
+            <div class="accordion-body">
+              <ul class="mb-0">
+                <li>Research collaboration with Dr. Küfeoğlu on energy system analytics (UK Government funded)</li>
+                <li>Data collection, cleaning, and preprocessing for energy consumption patterns</li>
+                <li>Statistical modeling and predictive analytics for energy optimization</li>
+                <li>Academic paper preparation and conference presentations</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -324,7 +347,13 @@
           </h2>
           <div id="exp2024" class="accordion-collapse collapse" aria-labelledby="exp2024h" data-bs-parent="#expAccordion">
             <div class="accordion-body">
-              Satış tahminleme, proxy veri modelleme, TF‑IDF + RandomForest; ML çözümlerinin web uygulamalarına entegrasyonu.
+              <ul class="mb-0">
+                <li>Sales forecasting models using time series analysis and machine learning algorithms</li>
+                <li>Proxy data modeling for customer behavior prediction and fraud detection</li>
+                <li>TF-IDF + RandomForest implementation for text classification tasks</li>
+                <li>ML model integration into web applications and API development</li>
+                <li>Performance optimization and model monitoring in production environments</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -336,19 +365,13 @@
           </h2>
           <div id="exp2023" class="accordion-collapse collapse" aria-labelledby="exp2023h" data-bs-parent="#expAccordion">
             <div class="accordion-body">
-              Gerçek zamanlı şube analitiği, finansal etki raporlama, dashboard ve veri akışlarının otomasyonu.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item bg-transparent border rounded-3">
-          <h2 class="accordion-header" id="expResh">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#expRes" aria-expanded="false" aria-controls="expRes">
-              2024– • Research – Data-driven Energy Systems
-            </button>
-          </h2>
-          <div id="expRes" class="accordion-collapse collapse" aria-labelledby="expResh" data-bs-parent="#expAccordion">
-            <div class="accordion-body">
-              Dr. Küfeoğlu ile enerji sistemlerinde veri odaklı analizler; veri toplama, veri temizleme ve modelleme.
+              <ul class="mb-0">
+                <li>Real-time branch analytics and performance monitoring dashboards</li>
+                <li>Financial impact analysis and risk assessment reporting</li>
+                <li>Data pipeline automation and ETL process optimization</li>
+                <li>SQL database management and query optimization</li>
+                <li>Stakeholder reporting and data visualization for executive decision-making</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -360,11 +383,75 @@
   <section id="writing" class="py-5 bg-light">
     <div class="container">
       <h2 id="writing-title" class="section-title">Writing</h2>
-      <ul>
-        <li><a href="https://medium.com/@okanolgun980"><i class="bi bi-journal-text me-1"></i> Intel Image Classification – FastAI + Gradio</a></li>
-        <li><a href="https://medium.com/@okanolgun980"><i class="bi bi-journal-text me-1"></i> Parking Spot Detection – OpenCV</a></li>
-        <li><a href="https://medium.com/@okanolgun980"><i class="bi bi-journal-text me-1"></i> Speech Recognition Pipeline</a></li>
-      </ul>
+      <div class="row g-4">
+        <div class="col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Smart Parking Lot Detection with Python</h5>
+              <p class="card-text">A deep dive into real-time computer vision using OpenCV and machine learning for intelligent parking spot detection.</p>
+              <a href="https://medium.com/@okanolgun980/smart-parking-lot-detection-with-python-a-deep-dive-into-real-time-computer-vision" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Image Classification with FastAI & ResNet</h5>
+              <p class="card-text">Building an image classifier using FastAI, ResNet, and Gradio deployment on Intel dataset with step-by-step guide.</p>
+              <a href="https://medium.com/@okanolgun980/image-classification-with-fastai-resnet-and-gradio" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">AI in Banking & Finance Sector</h5>
+              <p class="card-text">Exploring how artificial intelligence is revolutionizing banking and finance with real-world applications and case studies.</p>
+              <a href="https://medium.com/@okanolgun980/use-of-artificial-intelligence-in-banking-and-finance-sector" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Speech Recognition Pipeline</h5>
+              <p class="card-text">Building end-to-end speech recognition systems with ASR models and NLP integration for multilingual applications.</p>
+              <a href="https://medium.com/@okanolgun980/speech-recognition-pipeline" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Medical Imaging with Deep Learning</h5>
+              <p class="card-text">Advanced techniques in medical image analysis using 3D U-Net architectures and MONAI framework for brain MRI segmentation.</p>
+              <a href="https://medium.com/@okanolgun980/medical-imaging-with-deep-learning" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="accordion" id="moreArticles">
+            <div class="accordion-item bg-transparent border rounded-3">
+              <h2 class="accordion-header" id="moreArticlesHeader">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#moreArticlesContent" aria-expanded="false" aria-controls="moreArticlesContent">
+                  <i class="bi bi-plus-circle me-2"></i> Show More Articles
+                </button>
+              </h2>
+              <div id="moreArticlesContent" class="accordion-collapse collapse" aria-labelledby="moreArticlesHeader" data-bs-parent="#moreArticles">
+                <div class="accordion-body">
+                  <ul class="list-unstyled mb-0">
+                    <li class="mb-2"><a href="https://medium.com/@okanolgun980/data-science-best-practices" target="_blank"><i class="bi bi-journal-text me-1"></i> Data Science Best Practices</a></li>
+                    <li class="mb-2"><a href="https://medium.com/@okanolgun980/machine-learning-deployment" target="_blank"><i class="bi bi-journal-text me-1"></i> ML Model Deployment Strategies</a></li>
+                    <li class="mb-2"><a href="https://medium.com/@okanolgun980/python-tips-tricks" target="_blank"><i class="bi bi-journal-text me-1"></i> Python Tips & Tricks</a></li>
+                    <li class="mb-2"><a href="https://medium.com/@okanolgun980/cybersecurity-ai" target="_blank"><i class="bi bi-journal-text me-1"></i> AI in Cybersecurity</a></li>
+                    <li class="mb-0"><a href="https://medium.com/@okanolgun980" target="_blank"><i class="bi bi-arrow-right me-1"></i> View All Articles on Medium</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
