--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <h1 id="hero-title" class="fw-bold display-4" style="letter-spacing:-0.02em;">Building reliable AI for real-world impact.</h1>
           <p id="hero-sub" class="lead mt-3" style="max-width:760px;">Production-grade machine learning across medical imaging, cybersecurity, fintech, and energy. From research to deployment with measurable outcomes.</p>
           <div class="mt-4">
-            <a id="btn-cv-en" href="/Okan_Olgun_resume.pdf" target="_blank" class="btn btn-brand btn-lg me-2">Download CV (EN)</a>
+            <a id="btn-cv-en" href="/Okan_Olgun_resume.pdf" target="_blank" class="btn btn-ghost btn-lg me-2">Download CV (EN)</a>
             <a id="btn-cv-tr" href="/Okan_Olgun_ozgecmis.pdf" target="_blank" class="btn btn-ghost btn-lg me-2">Download CV (TR)</a>
             <a href="https://github.com/okanolgun" class="btn btn-ghost btn-lg me-2"><i class="bi bi-github me-1"></i> GitHub</a>
             <a href="https://www.linkedin.com/in/okanolgun06/" class="btn btn-ghost btn-lg me-2"><i class="bi bi-linkedin me-1"></i> LinkedIn</a>
@@ -388,18 +388,9 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">Smart Parking Lot Detection with Python</h5>
-              <p class="card-text">A deep dive into real-time computer vision using OpenCV and machine learning for intelligent parking spot detection.</p>
-              <a href="https://medium.com/@okanolgun980/smart-parking-lot-detection-with-python-a-deep-dive-into-real-time-computer-vision" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Image Classification with FastAI & ResNet</h5>
-              <p class="card-text">Building an image classifier using FastAI, ResNet, and Gradio deployment on Intel dataset with step-by-step guide.</p>
-              <a href="https://medium.com/@okanolgun980/image-classification-with-fastai-resnet-and-gradio" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
+              <h5 class="card-title">UAV Controller Demo with Python & Google Maps API</h5>
+              <p class="card-text">Python ve Google Maps API ile insansız hava aracı kontrolü demo projesi.</p>
+              <a href="https://medium.com/@okanolgun980/unmanned-aerial-vehicle-controller-demo-with-python-and-google-maps-api-89ca533b8f55" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
             </div>
           </div>
         </div>
@@ -407,50 +398,42 @@
           <div class="card h-100">
             <div class="card-body">
               <h5 class="card-title">AI in Banking & Finance Sector</h5>
-              <p class="card-text">Exploring how artificial intelligence is revolutionizing banking and finance with real-world applications and case studies.</p>
-              <a href="https://medium.com/@okanolgun980/use-of-artificial-intelligence-in-banking-and-finance-sector" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
+              <p class="card-text">Bankacılık ve finans alanında yapay zekâ uygulamaları ve etkileri.</p>
+              <a href="https://medium.com/@okanolgun980/use-of-artificial-intelligence-in-banking-and-finance-sector-9cd4d24c2704" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">Speech Recognition Pipeline</h5>
-              <p class="card-text">Building end-to-end speech recognition systems with ASR models and NLP integration for multilingual applications.</p>
-              <a href="https://medium.com/@okanolgun980/speech-recognition-pipeline" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
+              <h5 class="card-title">Smart Parking Lot Detection with Python</h5>
+              <p class="card-text">OpenCV ile gerçek zamanlı akıllı park yeri tespiti yaklaşımı.</p>
+              <a href="https://medium.com/@okanolgun980/smart-parking-lot-detection-with-python-a-deep-dive-into-real-time-computer-vision-1aedebb2737c" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">Medical Imaging with Deep Learning</h5>
-              <p class="card-text">Advanced techniques in medical image analysis using 3D U-Net architectures and MONAI framework for brain MRI segmentation.</p>
-              <a href="https://medium.com/@okanolgun980/medical-imaging-with-deep-learning" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
+              <h5 class="card-title">China Real Estate Crisis & House Price Prediction</h5>
+              <p class="card-text">Çin’deki konut krizi ve konut fiyat tahmini üzerine analiz.</p>
+              <a href="https://medium.com/@okanolgun980/the-real-estate-crisis-in-china-the-potential-effects-of-this-crisis-and-predicting-house-prices-2a763385fd21" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="accordion" id="moreArticles">
-            <div class="accordion-item bg-transparent border rounded-3">
-              <h2 class="accordion-header" id="moreArticlesHeader">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#moreArticlesContent" aria-expanded="false" aria-controls="moreArticlesContent">
-                  <i class="bi bi-plus-circle me-2"></i> Show More Articles
-                </button>
-              </h2>
-              <div id="moreArticlesContent" class="accordion-collapse collapse" aria-labelledby="moreArticlesHeader" data-bs-parent="#moreArticles">
-                <div class="accordion-body">
-                  <ul class="list-unstyled mb-0">
-                    <li class="mb-2"><a href="https://medium.com/@okanolgun980/data-science-best-practices" target="_blank"><i class="bi bi-journal-text me-1"></i> Data Science Best Practices</a></li>
-                    <li class="mb-2"><a href="https://medium.com/@okanolgun980/machine-learning-deployment" target="_blank"><i class="bi bi-journal-text me-1"></i> ML Model Deployment Strategies</a></li>
-                    <li class="mb-2"><a href="https://medium.com/@okanolgun980/python-tips-tricks" target="_blank"><i class="bi bi-journal-text me-1"></i> Python Tips & Tricks</a></li>
-                    <li class="mb-2"><a href="https://medium.com/@okanolgun980/cybersecurity-ai" target="_blank"><i class="bi bi-journal-text me-1"></i> AI in Cybersecurity</a></li>
-                    <li class="mb-0"><a href="https://medium.com/@okanolgun980" target="_blank"><i class="bi bi-arrow-right me-1"></i> View All Articles on Medium</a></li>
-                  </ul>
-                </div>
-              </div>
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Intel Image Classification</h5>
+              <p class="card-text">Intel veri setinde sınıflandırma: eğitim ve sonuçlar.</p>
+              <a href="https://medium.com/@okanolgun980/intel-image-classification-89aa4bfe434f" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
             </div>
           </div>
+        </div>
+        <div class="col-md-6">
+          <a href="https://medium.com/@okanolgun980" target="_blank" class="btn btn-ghost w-100 h-100 d-flex align-items-center justify-content-center" style="min-height:110px;">
+            <i class="bi bi-plus-circle me-2"></i> Show More on Medium
+          </a>
         </div>
       </div>
     </div>
@@ -477,20 +460,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Theme persistence
+    // Force dark theme always
     const root = document.body;
-    const themeToggle = document.getElementById('themeToggle');
-    const savedTheme = localStorage.getItem('theme') || 'light';
-    root.setAttribute('data-bs-theme', savedTheme);
-    if (themeToggle) {
-      themeToggle.addEventListener('click', () => {
-        const current = root.getAttribute('data-bs-theme') === 'dark' ? 'light' : 'dark';
-        root.setAttribute('data-bs-theme', current);
-        localStorage.setItem('theme', current);
-        themeToggle.innerHTML = current === 'dark' ? '<i class="bi bi-sun"></i>' : '<i class="bi bi-moon-stars"></i>';
-      });
-      themeToggle.innerHTML = savedTheme === 'dark' ? '<i class="bi bi-sun"></i>' : '<i class="bi bi-moon-stars"></i>';
-    }
+    root.setAttribute('data-bs-theme', 'dark');
 
     // Active link on scroll
     const navLinks = document.querySelectorAll('.nav-link');
